2004-01-07  graydon hoare  <graydon@pobox.com>

	* Makefile.am:
	* po/POTFILES.in: 
	* po/monotone.pot: Minor tweaks for distclean.
	* adns/config.h:
	* boost/socket/src/interface.cpp:
	* boost/socket/src/ip4/address.cpp:
	* boost/socket/src/ip4/protocol.cpp: OSX portability.
	* AUTHORS: Mention new contributors.
	* monotone.texi (Hook Reference): Document i18n hooks.

	Release point (v 0.9).	

2004-01-07  graydon hoare  <graydon@pobox.com>

	* cert.cc (ensure_parents_loaded)
	(expand_dominators)
	(expand_ancestors)
	(find_intersecting_node): New functions.
	(find_common_ancestor): Reimplement in terms of dominator
	and ancestor bitset intersection.

2004-01-05  Christof Petig <christof@petig-baender.de>

	* vocab.cc (verify<local_path>) Fix use of val() / iterator.
	* constants.cc (illegal_path_bytes): NUL-terminate.

2004-01-02  graydon hoare  <graydon@pobox.com>

	* diff_patch.cc (normalize_extents): Improve to handle an odd case. 
	* tests/t_fmerge.at: New test, to test it.
	* commands.cc (fload, fmerge): Permanently enable, for test. 
	* testsuite.at: Call new test.

2004-01-01  graydon hoare  <graydon@pobox.com>

	* file_io.hh, file_io.cc (read_localized_data, write_localized_data): 
	New functions
	* commands.cc, manifest.cc, transforms.cc: Use them.
	* monotone.texi: Minor update to i18n docs.
	* lua.hh, lua.cc (hook_get_linesep_conv, hook_get_charset_conv):
	New hooks.
	* acinclude.m4: Move AX_CREATE_STDINT_H in here.
	* po/monotone.pot: Regenerate.
	* NEWS, configure.ac: Prep for 0.9 release.

2003-12-30  graydon hoare  <graydon@pobox.com>

	* file_io.hh, file_io.cc (mkpath): New function.
	* commands.cc, database.cc, diff_patch.cc, file_io.cc, 
	lua.cc, vocab.cc, work.cc: Use it.
	* constants.cc (illegal_path_bytes_arr): Remove leading null.
	* monotone.texi: Include i18n docs.
	* tests/t_i18n_file.at: Check colon in filename.

2003-12-29  graydon hoare  <graydon@pobox.com>

	* file_io.cc: Localize names before touching fs.